@@ -42,4 +42,9 @@ def test_suite():
                'dependencies.txt', package='collective.solr.tests',
                test_class=SolrFunctionalTestCase, optionflags=optionflags),
         )
+        suite.addTest(
+            ztc.FunctionalDocFileSuite(
+               'collections.txt', package='collective.solr.tests',
+               test_class=SolrFunctionalTestCase, optionflags=optionflags),
+        )
     return suite
